--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
     ext {
         lombok_version = '1.18.24'
-        log4j2_version = '2.17.2'
-        junit5_version = '5.8.1'
+        log4j2_version = '2.18.0'
+        junit5_version = '5.9.0'
+        kafkaStreams_version = '3.2.1'
     }
 }
 
