--- a/learn-kafkastreaming/build.gradle
+++ b/learn-kafkastreaming/build.gradle
@@ -1,5 +1,6 @@
 
 dependencies {
     implementation group: 'org.apache.kafka', name: 'kafka-streams', version: "${kafkaStreams_version}"
+    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: "${kafkaStreams_version}"
     testImplementation group: 'org.apache.kafka', name: 'kafka-streams-test-utils', version: "${kafkaStreams_version}"
 }
