--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         log4j2_version = '2.18.0'
         junit5_version = '5.9.0'
         kafkaStreams_version = '3.2.1'
-        vavr_version = '0.10.4'
+        resilience4j_version = '1.7.1'
     }
 }
 
@@ -20,12 +20,17 @@ subprojects {
         mavenCentral()
     }
 
+//    compileJava {
+//        options.compilerArgs << ''
+//    }
+
     test {
         useJUnitPlatform()
     }
 
     dependencies {
-        implementation group: 'io.vavr', name: 'vavr', version: "${vavr_version}"
+        implementation group: 'io.github.resilience4j', name: 'resilience4j-all', version: "${resilience4j_version}"
+
         implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4j2_version}"
         implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4j2_version}"
         implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j2_version}"
